fix: увеличить z-index у Header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,7 +15,7 @@
   align-items: center;
   padding: 0 70px;
   box-sizing: border-box;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header_type_unauthorized {
